# crud_flask_python

./: README.md  pyproject.toml
instance/: crud-flask-python.sqlite
migrations/versions/: 80b502a35cc2_initial_migration.py
src/: app.py
src/controller/: auth.py  post.py  user.py
