[tool.poetry]
name = "flask-python"
version = "0.1.0"
description = ""
authors = ["Daiane Cruz <daianercruz12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
